--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -33,15 +34,17 @@ button {
   box-shadow: rgba(0, 0, 0, 0.11);
   border: none;
   background: #ffffff;
-  border-radius: 3rem;
   height: 3rem;
+  border: 1px solid lightgray;
   width: 100%;
   outline: none;
   font-family: 'Montserrat', sans-serif;
   padding: 0 3rem;
   font-size: 1rem;
 }
+
 @media (min-width: 1100px) {
+
   .input,
   .passwordInput,
   .emailInput,
@@ -91,10 +94,15 @@ button {
 .profile,
 .listingDetails,
 .category,
-.explore {
+.explore{
   margin: 1rem;
+
 }
+
+
+
 @media (min-width: 1024px) {
+
   .pageContainer,
   .offers,
   .profile,
@@ -126,10 +134,12 @@ button {
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -140,128 +150,13 @@ button {
   font-weight: 800;
 }
 
-.navbar {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 85px;
-  background-color: #ffffff;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.navbarNav {
-  width: 100%;
-  margin-top: 0.75rem;
-  overflow-y: hidden;
-}
-
-.navbarListItems {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.navbarListItem {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.navbarListItemName,
-.navbarListItemNameActive {
-  margin-top: 0.25rem;
-  font-size: 14px;
-  font-weight: 600;
-  color: #8f8f8f;
-}
-.navbarListItemNameActive {
-  color: #2c2c2c;
-}
-
-.nameInput {
-  margin-bottom: 2rem;
-  background: url('./assets/svg/badgeIcon.svg') #ffffff 2.5% center no-repeat;
-}
-
-.emailInput {
-  margin-bottom: 2rem;
-  background: url('./assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
-}
-
-.passwordInputDiv {
-  position: relative;
-}
-
-.passwordInput {
-  margin-bottom: 2rem;
-  background: url('./assets/svg/lockIcon.svg') #ffffff 2.5% center no-repeat;
-}
-
-.showPassword {
-  cursor: pointer;
-  position: absolute;
-  top: -4%;
-  right: 1%;
-  padding: 1rem;
-}
-
-.forgotPasswordLink {
-  cursor: pointer;
-  color: #00cc66;
-  font-weight: 600;
-  text-align: right;
-}
-
-.signInBar,
-.signUpBar {
-  margin-top: 3rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: inherit;
-}
-
-.signInButton,
-.signUpButton,
-.signInText,
-.signUpText {
-  cursor: pointer;
-}
 @media (min-width: 1024px) {
-  .signInBar,
-  .signUpBar {
-    justify-content: start;
-  }
-}
 
-.signInText,
-.signUpText {
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.signInButton,
-.signUpButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 3rem;
-  height: 3rem;
-  background-color: #00cc66;
-  border-radius: 50%;
-}
-@media (min-width: 1024px) {
-  .signInButton,
+  /* .signInButton,
   .signUpButton {
     margin-left: 3rem;
-  }
+  } */
 }
 
 .socialLogin {
@@ -302,6 +197,7 @@ button {
     margin-bottom: 10rem;
   }
 }
+
 @media (max-height: 536) {
   .explore {
     margin-bottom: 10rem;
@@ -348,6 +244,7 @@ button {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 0.5rem;
 }
+
 @media (min-width: 1024px) {
   .swiperSlideText {
     font-size: 1.75rem;
@@ -365,6 +262,7 @@ button {
   padding: 0.25rem 0.5rem;
   border-radius: 1rem;
 }
+
 @media (min-width: 1024px) {
   .swiperSlidePrice {
     font-size: 1.25rem;
@@ -375,6 +273,7 @@ button {
   display: flex;
   justify-content: space-between;
 }
+
 .exploreCategories a {
   width: 48%;
 }
@@ -419,6 +318,7 @@ button {
   border-radius: 1.5rem;
   object-fit: cover;
 }
+
 @media (min-width: 1024px) {
   .categoryListingImg {
     width: 19%;
@@ -429,6 +329,7 @@ button {
 .categoryListingDetails {
   width: 65%;
 }
+
 @media (min-width: 1024px) {
   .categoryListingDetails {
     width: 79%;
@@ -538,6 +439,7 @@ button {
   padding: 0;
   list-style-type: none;
 }
+
 .listingDetailsList li {
   margin: 0.3rem 0;
   font-weight: 500;
@@ -556,6 +458,7 @@ button {
   overflow-x: hidden;
   margin-bottom: 3rem;
 }
+
 @media (min-width: 1024px) {
   .leafletContainer {
     height: 400px;
@@ -671,6 +574,7 @@ button {
   font-weight: 600;
   width: 100%;
 }
+
 .profileNameActive {
   background-color: rgba(44, 44, 44, 0.1);
 }
@@ -681,6 +585,7 @@ button {
 .profileEmailActive {
   font-weight: 500;
 }
+
 .profileEmailActive {
   background-color: rgba(44, 44, 44, 0.1);
 }
@@ -738,6 +643,7 @@ button {
   justify-content: center;
   align-items: center;
 }
+
 .formButtonActive {
   background-color: #00cc66;
   color: #ffffff;
@@ -756,6 +662,7 @@ button {
   outline: none;
   font-family: 'Montserrat', sans-serif;
 }
+
 .formInputSmall,
 .formInputFile {
   margin-right: 3rem;
@@ -793,6 +700,7 @@ button {
 .formInputFile {
   width: 100%;
 }
+
 .formInputFile::-webkit-file-upload-button {
   background-color: #00cc66;
   border: none;
