--- a/src/pages/css/SignIn.css
+++ b/src/pages/css/SignIn.css
@@ -7,9 +7,10 @@
     justify-content: center;
 }
 
-.banner{
-    margin: 10px 0; 
-} 
+.banner {
+    margin: 10px 0;
+}
+
 .SignInPageContainer {
 
     padding: 20px;
@@ -32,6 +33,11 @@
     margin-bottom: 2rem;
     background: url('../../assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
 }
+
+
+/* .dateInput {
+
+} */
 
 .passwordInputDiv {
     position: relative;
